--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -125,3 +125,27 @@ footer{
     margin-bottom:10px;
 
 }
+
+// マイページ
+
+// 登録情報
+.mypage{
+
+  text-align:center;
+  width:700px;
+  display: inline-block;
+}
+
+// 星評価・お気に入り一覧
+.mysidebar{
+  padding:30px;
+  width:300px;
+  display: inline-block;
+  // margin-right: 20px;
+  margin-left: 20px;
+}
+
+.mytable{
+  border-collapse: separate;
+  border-spacing: 20px;
+}
