--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -57,13 +57,18 @@
 </table>
 </div>
 
+
 <div class = "mypage">
 
 
-<a>登録情報</a> <a class="btn btn-outline-success m-5" href="/customers/information/edit" role="button">編集する</a>
+<h4>☆登録情報</h4>
 
-  <table class="table table-striped table-hover">
+  <table class="table table-hover">
   <tbody>
+    <tr>
+      <td></td>
+      <td><a class="btn btn-outline-success" href="/customers/information/edit" role="button">編集する</a></td>
+    </tr>
     <tr>
       <td>氏名</td>
       <td><%= @customer.name %></td>
