--- a/app/views/public/shop_comments/index.html.erb
+++ b/app/views/public/shop_comments/index.html.erb
@@ -1,4 +1,4 @@
-<h4><%= image_tag "lamp.jpg", size: '80x80' %>評価一覧</h4>
+<h4><%= image_tag "arai.jpg", size: '80x80' %>評価一覧</h4>
 <% if customer_signed_in? %>
 <a>＊削除は<%= link_to "マイページ", my_page_path %>で出来ます。</a>
 <% else %>
