--- a/app/views/public/areas/index.html.erb
+++ b/app/views/public/areas/index.html.erb
@@ -1,4 +1,4 @@
-<h4><%= image_tag "chair.jpg", size: '80x80' %><%= @area.name %>店舗一覧</h4>
+<h4><%= image_tag "lamp2.jpg", size: '80x80' %><%= @area.name %>店舗一覧</h4>
 <div class="container">
   <div class="row">
     <div class="col-md-4 mb-4">
