--- a/app/views/public/post_shops/show.html.erb
+++ b/app/views/public/post_shops/show.html.erb
@@ -1,6 +1,6 @@
 
 <table class="table">
-<h4><%= image_tag "pagu.jpg", size: '80x80' %>店舗詳細</h4>
+<h4><%= image_tag "risu.jpg", size: '80x80' %>店舗詳細</h4>
 <thead>
     <tr>
       <th>店舗画像</th>
