--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,11 @@
 <% if request.fullpath.include? "admin" %>
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#E5CCFF;">
   <div class="container-fluid">
-
-    <a class="navbar-brand" href="/admin">TOP</a>
+    <% if admin_signed_in? %>
+    <a class="navbar-brand" href="/admin">TOP(管理)</a>
+    <% else %>
+    <a class="navbar-brand" href="/">TOP</a>
+    <% end %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
