--- a/app/views/admin/post_shops/index.html.erb
+++ b/app/views/admin/post_shops/index.html.erb
@@ -10,6 +10,7 @@
       <th>投稿日時</th>
       <th>エリア</th>
     </tr>
+
 <% @post_shops.each do |post_shop| %>
     <tr>
       <td>
@@ -23,10 +24,12 @@
       <td><%= post_shop.customer.nickname %></td>
       <td><%= post_shop.created_at.strftime('%Y/%m/%d(%R)') %></td>
       <td><%= post_shop.area.name %></td>
-      
+
     </tr>
 <% end %>
+
 </table>
+
 </div>
-<footer>
-<%= paginate @post_shops %></footer>
+
+<footer><%= paginate @post_shops %></footer>
